--- a/html_15.html
+++ b/html_15.html
@@ -6,7 +6,7 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s4.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <header>
-            <h2>Виды переломов</h2>
+            <h3>Костные переломы</h3>
             <hr>
         </header>
 
