--- a/html_15.html
+++ b/html_15.html
@@ -6,19 +6,20 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s4.css">
+    <link rel="stylesheet" href="css\s5.css">
 </head>
 
 <body>
     <header>
         <hr>
         <p> <a name="top"></a></p>
-        <h1>Переломы костей</h1>
+        <h1>
+            <span class="letter1">П</span>
+            ереломы костей</h1>
+        </h1>
         <hr>
     </header>
     <nav>
-        меню:
-
         <h2>Навигация</h2>
         <hr>
         <p>
@@ -36,25 +37,24 @@
             <h3>Костные переломы</h3>
             <hr>
         </header>
-
         <article>
             <p><a name="tipi perelomov"></a></p>
             <header>
-                <h3>Типы переломов</h3>
+                <h2>Типы переломов</h2>
             </header>
             <section>
                 <header>
-                <h2>введение</h2>
+                <h3>введение</h3>
                 </header>
-                <h4>Типы переломов классифицируют по нескольким критериям, это связано с отсутствием единых причин и
+                <p>Типы переломов классифицируют по нескольким критериям, это связано с отсутствием единых причин и
                     локализации переломов.
-                </h4>
+                </p>
             </section>
             <section>
                 <header>
-                    <h2>основная часть</h2>
+                    <h3>основная часть</h3>
                     </header>
-                <h4>
+                <p>
                     В современных классификациях выделяют типы переломов в зависимости от следующих признаков:
 
                     По причине возникновения
@@ -101,50 +101,53 @@
                     довольно известным типам травм верхней конечности относятся перелом Монтеджа, возникающий при
                     переломе локтевой кости в верхней трети и вывихе головки лучевой кости с повреждением ветви лучевого
                     нерва, и перелом Голеацци, представляющий собой перелом лучевой кости в нижней трети с разрывом
-                    дистального радио-ульнарного сочленения и вывихом в этом суставе.[4][5]
+                    дистального радио-ульнарного сочленения и вывихом в этом суставе.
 
                     В детском и юношеском возрасте наблюдаются переломы по неокостеневшей ростковой (эпифизарной) линии
                     — эпифизеолизы. В пожилом возрасте переломы происходят при значительно меньшей травмирующей нагрузке
                     и сроки восстановления увеличиваются. Это связано с изменением соотношения минерального и
-                    органического компонентов кости.</h4>
-                </h4>
+                    органического компонентов кости.
+            </p>
             </section>
             <section>
                 <header>
-                    <h2>заключение</h2>
+                    <h3>заключение</h3>
                     </header>
-                <h4>Переломы костей возникают в результате нагрузки, превышающей предел их прочности. Для каждой кости,
+            <p>
+                    Переломы костей возникают в результате нагрузки, превышающей предел их прочности. Для каждой кости,
                     по разным осям, величины предельной нагрузки отличаются. Тип перелома в каждом конкретном случае
                     зависит от направления вектора приложенной силы. Например, если удар приходится перпендикулярно
                     трубчатой кости, то возникает поперечный перелом, при приложении вектора силы параллельно оси кости
-                    возникают продольные и оскольчатые переломы.[6]</h4>
+                    возникают продольные и оскольчатые переломы.
+                </p>
             </section>
         </article>
     <article>
         <p><a name="metodi lecheniya"></a></p>
         <header>
-            <h3>Методы лечения переломов</h3>
+            <h2>Методы лечения переломов</h2>
         </header>
         <section>
             <header>
-                <h2>введение</h2>
+                <h3>введение</h3>
                 </header>
-            <h4>В зависимости от вида перелома и степни повреждения как кости , так и окружающих тканей способы первой
+            <p> В зависимости от вида перелома и степни повреждения как кости , так и окружающих тканей способы первой
                 помощи при переломах могут сильно разниться, от чего перед предоставлением медицинской помощи нужно
-                точно определить тип перелома.</h4>
+                точно определить тип перелома.
+            </p>
         </section>
         <section>
             <header>
-                <h2>основная часть</h2>
+                <h3>основная часть</h3>
                 </header>
-            <h4>Основные меры первой помощи при травме и переломе костей заключаются в следующем:
+            <p>Основные меры первой помощи при травме и переломе костей заключаются в следующем:
 
                 выведение пострадавшего из состояния шока и проведение мер профилактики инфицирования раны (остановка
                 кровотечения, обезболивание, наложение стерильной повязки);
                 обеспечение неподвижности пострадавшего органа и костных отломков;
                 максимально быстрая доставка пострадавшего в травмпункт или больницу.
-            </h4>
-            <H4>В больнице или другом медицинском учреждении проводится рентген, с помощью которого уточняются диагноз,
+            </p>
+            <p>В больнице или другом медицинском учреждении проводится рентген, с помощью которого уточняются диагноз,
                 локализация, характер повреждения и направление смещения костных отломков.
 
                 Затем врач вправляет обломки костей (производит репозицию). Это делается только после обезболивания.
@@ -163,53 +166,56 @@
 
                 В настоящее время для лечения переломов применяют такие современные приспособления, как аппарат
                 Илизарова и ортез.
-            </H4>
+            </p>
         </section>
         <section>
             <header>
-                <h2>Заключение</h2>
+                <h3>Заключение</h3>
                 </header>
-            <h4>При чрезмерных нагрузках кости человека имеет тенденцию к повреждению , от чего медицинским работникам
-                важно знать методы их лечения ,для применения их на практике.</h4>
+            <p>При чрезмерных нагрузках кости человека имеет тенденцию к повреждению , от чего медицинским работникам
+                важно знать методы их лечения ,для применения их на практике.
+            </p>
         </section>
 
     <article>
         <p><a name="apparat ilizarowa"></a></p>
         <header>
-            <h3>Аппарат Илизарова</h3>
+            <h2>Аппарат Илизарова</h2>
         </header>
         <section>
             <header>
-                <h2>Вступление</h2>
+                <h3>Вступление</h3>
                 </header>
-            <h4>Аппара́т Илиза́рова — чрескостный компрессионно-дистракционный аппарат для осуществления остеосинтеза
+            <p>Аппара́т Илиза́рова — чрескостный компрессионно-дистракционный аппарат для осуществления остеосинтеза
                 (соединения и сращения костных переломов) благодаря образованию межуточной костной мозоли. Помимо
                 компрессии, то есть плотного сжатия фрагментов кости, можно производить и полную закрытую репозицию
                 обломков. Аппарат одновременно является и дистракционным, так как позволяет осуществить дистракцию
-                (растяжение), необходимую при операциях по удлинению конечностей.</h4>
+                (растяжение), необходимую при операциях по удлинению конечностей.
+            </p>
         </section>
         <section>
             <header>
-                <h2>Основная часть</h2>
+                <h3>Основная часть</h3>
                 </header>
-            <h4>Принцип действия
+            <p>Принцип действия
                 Работа аппарата основана на открытии Илизарова (реестр открытий СССР, № 355 от 24 ноября 1970):
                 «Экспериментально и клинически установлено неизвестное ранее общебиологическое свойство тканей отвечать
                 на возникающие в них дозированные напряжения, преимущественно напряжения растяжения, ростом и
-                регенерацией, обусловленными стимуляцией процессов биосинтеза в тканях (эффект Илизарова)»</h4>
-            <h4>Особенности аппарата
+                регенерацией, обусловленными стимуляцией процессов биосинтеза в тканях (эффект Илизарова)»
+            </p>
+        <p>Особенности аппарата
                 Характерные особенности аппарата: возможность индивидуализированного применения; сохранение движений в
-                суставе после фиксации; транспортабельность и мобильность больного после наложения.</h4>
+                суставе после фиксации; транспортабельность и мобильность больного после наложения.
+            </p>
         </section>
         <section>
             <header>
-                <h2>Заключение</h2>
+                <h3>Заключение</h3>
                 </header>
             <h4>Аппарат Илизарова явлется крайне важной разработкй , применимой для множества видов манипуляций с
                 костной тканью для её последующего заживления</h4>
         </section>
     </article>
-
     </main>
     <p> <a href="#top">Наверх</a></p>
     <footer>
@@ -249,5 +255,4 @@
     </footer>
     <script src="js\scripts.js"></script>
 </body>
-
 </html>
