--- a/html_19.html
+++ b/html_19.html
@@ -6,7 +6,7 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s9.css">
 </head>
 
 <body>
@@ -37,6 +37,21 @@
             <h3>Костные переломы</h3>
             <hr>
         </header>
+        <aside>
+            <p>
+            В детском и юношеском возрасте наблюдаются переломы по неокостеневшей ростковой (эпифизарной) линии
+                    — эпифизеолизы. В пожилом возрасте переломы происходят при значительно меньшей травмирующей нагрузке
+                    и сроки восстановления увеличиваются. Это связано с изменением соотношения минерального и
+                    органического компонентов кости.</p>
+        </aside>
+        <aside style="float:right">
+
+            Так, например, перелом шиловидного отростка лучевой кости называется переломом Коллеса. Также к
+            довольно известным типам травм верхней конечности относятся перелом Монтеджа, возникающий при
+            переломе локтевой кости в верхней трети и вывихе головки лучевой кости с повреждением ветви лучевого
+            нерва, и перелом Голеацци, представляющий собой перелом лучевой кости в нижней трети с разрывом
+            дистального радио-ульнарного сочленения и вывихом в этом суставе.
+        </aside>
         <article>
             <p><a name="tipi perelomov"></a></p>
             <header>
@@ -63,7 +78,11 @@
                     По тяжести поражения
                     1Полные.
                     а)Без смещения (например, под надкостницей).
+                    <a href="$" class="myimage-ssilka">Пример того как выглядит перелом без смещения</a>
+                    <div class="myimage-div"><img src="image/перелом без смещения.jpg" alt="image"width="10%"></div>
                     б)Со смещением отломков[3].
+                    <a href="$" class="myimage-ssilka">Пример того как выглядит перелом без смещения</a>
+                    <div class="myimage-div"><img src="image/перелом со смещением.jpg" alt="image"width="10%"></div>
                     2Неполные — трещины и надломы.
                     По форме и направлению перелома
                     1Поперечные — линия перелома условно перпендикулярна оси трубчатой кости.
@@ -81,6 +100,8 @@
                     По целостности кожного покрова
                     1 Закрытые
                     2 Открытые
+                    <a href="$" class="myimage-ssilka">Пример того как выглядит открытый перелом</a>
+                    <div class="myimage-div"><img src="image/открытый перелом.jpg" alt="image"width="10%"></div>
                     По локализации перелома
                     В пределах трубчатой кости выделяют пелеломы:
                     1диафиза
@@ -145,6 +166,8 @@
                 выведение пострадавшего из состояния шока и проведение мер профилактики инфицирования раны (остановка
                 кровотечения, обезболивание, наложение стерильной повязки);
                 обеспечение неподвижности пострадавшего органа и костных отломков;
+                <a href="$" class="myimage-ssilka">Неподвижность обеспечивается гипсовой повязкой</a>
+                <div class="myimage-div"><img src="image/гипсовая повязка.jpg" alt="image"width="10%"></div>
                 максимально быстрая доставка пострадавшего в травмпункт или больницу.
             </p>
             <p>В больнице или другом медицинском учреждении проводится рентген, с помощью которого уточняются диагноз,
@@ -186,7 +209,9 @@
             <header>
                 <h3>Вступление</h3>
                 </header>
-            <p>Аппара́т Илиза́рова — чрескостный компрессионно-дистракционный аппарат для осуществления остеосинтеза
+            <p>Аппара́т Илиза́рова
+                <a href="$" class="myimage-ssilka">Аппарат Илизарова:</a>
+                <div class="myimage-div"><img src="image/аппарат илизарова.jpg"alt="image"width="10%"></div> — чрескостный компрессионно-дистракционный аппарат для осуществления остеосинтеза
                 (соединения и сращения костных переломов) благодаря образованию межуточной костной мозоли. Помимо
                 компрессии, то есть плотного сжатия фрагментов кости, можно производить и полную закрытую репозицию
                 обломков. Аппарат одновременно является и дистракционным, так как позволяет осуществить дистракцию
