--- a/html_25.html
+++ b/html_25.html
@@ -6,21 +6,29 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\s1.css">
+    <link rel="stylesheet" href="css\s25.css">
 </head>
 
 <body>
+    <div class="container">
+        <img src="image/картинка 1.jpg" alt="image" align="left" style="width:50%">
+    </div>
     <header>
         <hr>
         <p> <a name="top"></a></p>
-        <h1>
+        <h1 style="height: 100px">
             <span class="letter1">П</span>
             ереломы костей</h1>
+        <h1 style="height: 200px">
+            <span class="letter1">Т</span>
+            ипы переломов. Лечение переломов.
         </h1>
         <hr>
     </header>
     <nav>
-        <h2>Навигация</h2>
+       <aside >
+        <p style="font-size:x-large;"align="left"> Информация</p> 
+        <h2 > Навигация</h2>
         <hr>
         <p>
         <ul>
@@ -31,6 +39,7 @@
             <li><a href="#apparat ilizarowa">Аппарат Илизарова</a></li>
         </ul>
         </p>
+    </aside>
     </nav>
     <main>
         <header>
@@ -228,8 +237,7 @@
             </h5>
             <address>
                 <hr>
-                <a
-                    href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D0%BB%D0%BE%D0%BC_%D0%BA%D0%BE%D1%81%D1%82%D0%B8">https://ru.wikipedia.org/wiki/Перелом_кости</a>
+                <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D0%BB%D0%BE%D0%BC_%D0%BA%D0%BE%D1%81%D1%82%D0%B8">https://ru.wikipedia.org/wiki/Перелом_кости</a>
                 </hr>
             </address>
             <address>
